[applets/diskanddevices] Add xdg-activation support to device ations

We need to know what app is launched so that CommandLauncherJob can apply xdg-activation

When opening in the file manager we query what the default file manager is and use that

When invoking other actions read a new action metadata key that specifies what is launched

BUG: 460268


(cherry picked from commit 88f8af29da700f9d553371e3fbf71136ecceaf8f)